messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
    color: green  # switch this between green/blue as needed
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
